man for config files

--- a/acxi.1
+++ b/acxi.1
@@ -1492,7 +1492,7 @@ locations, in this order of priority: \fB$XDG_CONFIG_HOME/acxi.conf\fR,
 \fB$HOME/.config/acxi.conf\fR, and, as last default, \fB$HOME/.acxi.conf\fR, i.e.:
 
 \fB$XDG_CONFIG_HOME/acxi.conf\fR > \fB$HOME/.config/acxi.conf\fR >
-\fB$HOME/.acxi.conf\fR
+\fB$HOME/.acxi.conf\fR > \fB/etc/acxi.conf.d/acxi.conf\fR > \fB/etc/acxi.conf\fR
 
 .TP
 .B MANUALLY SET
