added Publisher tag to man, prefill

--- a/acxi.1
+++ b/acxi.1
@@ -924,6 +924,7 @@ field names can use a space, \fB\-\fR, \fB_\fR or no space as word separators):
 \fBMIXER\fR \- Mixer, Mixed by, Masterer, Mastered by.
 \fBOPUS\fR \- Opus.
 \fBPRODUCER\fR \- Producer, Recorded by, Taper, Taped By.
+\fBPUBLISHER\fR \- Publisher, Label
 \fBREMIXER\fR \- Remixer, Remixed by, Remasterer, Remastered by.
 \fBSHNID\fR \- Shnid. Non\-standard. See below.
 \fBSOURCEMEDIA\fR \- Media, SourceMedia, Source Media.
@@ -959,7 +960,7 @@ for classical recordings, but up to you.
 
 * \fBPRODUCER\fR is preferred over \fBMIXER\fR unless for example 1 person 
 produced, taped, or otherwise created the recording, and another mixed or 
-mastered it.  
+mastered it.
 
 * \fBREMIXER\fR is if track is remixed, remastered. The person who did the
 remix/remaster.
